# aoc2023

./: Cargo.toml
inputs/: day00_test.txt
src/: lib.rs
