[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timed = "0.2.1"
itertools = "0.12.0"
map-macro = "0.2.6"
regex = "1.10.2"
rayon = "1.8.0"
counter = "0.5.7"
strum = "0.25"
strum_macros = "0.25"
num = "0.4.1"

[profile.release]
strip = true
lto = "fat"
panic = 'abort'
codegen-units = 1
